Closed
Bug 200498
Opened 22 years ago
Closed 22 years ago
Multiple copies of my bookmarks file are showing up in TEMP / bookmark changes are lost / cannot modify or delete
Categories
(SeaMonkey :: Bookmarks & History, defect, P1)
SeaMonkey
Bookmarks & History
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: agracebush, Assigned: janv)
References
Details
(Keywords: dataloss, regression, Whiteboard: [adt2])
Attachments
(1 file)
3.50 KB,
patch
|
janv
:
review+
bryner
:
superreview+
|
Details | Diff | Splinter Review |
Steps to reproduce:
Install Mozilla 4/3 nightly
Check TEMP directory (see bug 197847)
notice bookmarks.html and bookmarks-1.html files
Install commercial 4/3 nightly (testing GRE)
check TEMP again
now bookmarks-2 and bookmarks-3 files show up
did more installs and get 2 copies of the bookmarks file each time
adding ssu in case he is aware of bookmark changes during installation
Comment 1•22 years ago
|
||
Confirmed in build 2003040305 on Mac OS X 10.2.4, so changing to all/all.
I saw several bookmarks.html files in my /tmp directory. I cleared them, and
restart Mozilla. Nothing appeared in that directory. When I closed Mozilla again
( I didn't open the bookmark-manager), I saw a bookmarks.html and a
bookmarks-1.html file in /tmp . Both were exactly identical to my real
bookmarks.html file, I checked with diff. When I restarted again, a
bookmarks-2.html and a bookmarks-3.html appeared. And so on.
This must be related to the new bookmark-code that has been checked in. The
files are written during shutdown.
OS: Windows 2000 → All
Hardware: PC → All
Comment 2•22 years ago
|
||
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.4a) Gecko/20030403
A hour ago I deleted 30 bookmarks.html, @1385 kb each. Now I have again 10
bookmarks.html, but the youngest has only 1382 kb, though I didn´t change
anything. My volumecounter shows 30 mins online-time, but 5 minutes ago DUN came
up and did an auto-reconnect. I don´t know, if I´ve been offline or not.
Are these bookmarks.html written when going on- and offline?
I see this too, and I think I know why they are being created. I have been
adding bookmarks to my Personal toolbar, but couldn't figure out why it wasn't
staying there after a restart of the browser. The Personal tool bar kept
reverting to the previous state.
I did a grep in the bookmarks*.html files (I have 1-27) in the %temp% dir for
the bookmarks that I know I saved and sure enough they were there, but not in my
profiles dir's bookmark file.
Looks like someone tweaked something related to the bookmarks path or the
bookmarks code itself.
reassigning to jan for now, per ssptizer's recommendation
Assignee | ||
Comment 5•22 years ago
|
||
This can be related to recent nsIFile changes in bookmarks service.
Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Comment 6•22 years ago
|
||
I think the error must be at
http://lxr.mozilla.org/seamonkey/source/xpfe/components/bookmarks/src/nsBookmarksService.cpp#4901
or the lines immediately preceeding it. Works for me on Win2k and linux. Can
somebody who is experiencing this run a debug build and see if there are any
debug messages at shutdown that might present a clue?
Assignee | ||
Comment 7•22 years ago
|
||
I have a patch for this.
Comment 8•22 years ago
|
||
I'm on Mac OS X, but I don't have a debug-build ready to test (and I'm leaving
for Paris this evening anyway).
I know that the bookmark file is created first in /tmp and copied to the real
location later. And why 2 (identical) bookmark files ? I'm thinking that we
actually write the bookmark file twice, but nobody ever noticed. Maybe that part
of the shutdown code is executed twice.
Comment 9•22 years ago
|
||
*** Bug 200401 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 10•22 years ago
|
||
first important thing here is the change from CopyTo() to MoveTo()
CopyTo() can fail if the destination file already exists.
There is another thing I changed. The temp file should be created in profile
directory not in the temp dir (as it was before).
Assignee | ||
Updated•22 years ago
|
Attachment #119446 -
Flags: superreview?(jaggernaut)
Attachment #119446 -
Flags: review?(bsmedberg)
Comment 11•22 years ago
|
||
*** Bug 200669 has been marked as a duplicate of this bug. ***
Comment 12•22 years ago
|
||
Comment on attachment 119446 [details] [diff] [review]
patch
>+ rv = tempFile->CreateUnique(nsIFile::NORMAL_FILE_TYPE, /*octal*/ 0664);
I think that this should be 0600, see bug 59557 for discussion.
>- rv = tempFile->CopyToFollowingLinks(bookmarkParentDir, bookmarkLeafName);
[snip]
>+ rv = tempFile->MoveTo(bookmarkParentDir, bookmarkLeafName);
Part of the fix for bug 191783 was to allow symlinked bookmarks files. This fix
breaks symlinks, but I don't know the correct solution.
so r=bsmedberg for this short-term fix, and let's look at how to make symlinks
work.
Assignee | ||
Comment 13•22 years ago
|
||
>I think that this should be 0600, see bug 59557 for discussion.
no problem, I'll change that.
>Part of the fix for bug 191783 was to allow symlinked bookmarks files. This fix
>breaks symlinks, but I don't know the correct solution.
actually, it never worked on MacOS X, so it can't break something that is
already broken
>
>so r=bsmedberg for this short-term fix, and let's look at how to make symlinks
>work.
Well, I don't consider this as a short-term fix. I think it's the right thing to
do with the current nsIFile API.
We simply can't use CopyToFollowingLinks() because that may fail if the
destination file already exists (it's explicitely documented in nsIFile.idl)
anyway, thanks for review
Comment 14•22 years ago
|
||
*** Bug 200674 has been marked as a duplicate of this bug. ***
Comment 15•22 years ago
|
||
Nav triage team: nsbeta1+/adt2
Updated•22 years ago
|
Keywords: regression
Comment 16•22 years ago
|
||
*** Bug 200778 has been marked as a duplicate of this bug. ***
Comment 17•22 years ago
|
||
Tweaking summary for better Bugzilla queries.
Summary: Multiple copies of my bookmarks file are showing up in TEMP → Multiple copies of my bookmarks file are showing up in TEMP / bookmark changes are lost / cannot modify or delete
Comment 18•22 years ago
|
||
*** Bug 200779 has been marked as a duplicate of this bug. ***
Comment 19•22 years ago
|
||
I guess that this bug is related to bug 199328 for Phoenix.
Assignee | ||
Comment 20•22 years ago
|
||
it's not related to bug 199328
Comment 21•22 years ago
|
||
*** Bug 200815 has been marked as a duplicate of this bug. ***
Comment 22•22 years ago
|
||
*** Bug 200867 has been marked as a duplicate of this bug. ***
Comment 23•22 years ago
|
||
*** Bug 200879 has been marked as a duplicate of this bug. ***
Updated•22 years ago
|
Flags: blocking1.4b?
Comment 24•22 years ago
|
||
*** Bug 200979 has been marked as a duplicate of this bug. ***
Updated•22 years ago
|
Attachment #119446 -
Flags: superreview?(jaggernaut) → superreview+
Assignee | ||
Updated•22 years ago
|
Attachment #119446 -
Flags: review?(bsmedberg) → review+
Assignee | ||
Comment 25•22 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 26•22 years ago
|
||
*** Bug 201022 has been marked as a duplicate of this bug. ***
Comment 27•22 years ago
|
||
could bug 188401 be an early report of this or is that just out of window of
this regression?
Comment 28•22 years ago
|
||
Sounds like bug 188401 is just like what happened to me
Comment 29•22 years ago
|
||
Now I can save bookmarks again! Thanks to the people that have been working on
this :-) Anyone else that can verify? Build ID: 2003040708
Comment 30•22 years ago
|
||
WFM win32, XP-pro 2003040708
Reporter | ||
Comment 31•22 years ago
|
||
I am not seeing bookmark file copies today
Comment 32•22 years ago
|
||
*** Bug 201085 has been marked as a duplicate of this bug. ***
Comment 33•22 years ago
|
||
Build 2003040708, Win98 here. It works fine. Thanks :-)
Comment 34•22 years ago
|
||
WFM with 2003040708/win2k. marking verified based on that and previous comments.
Status: RESOLVED → VERIFIED
Comment 35•22 years ago
|
||
anyone noticed that bookmarks export has also regressed as well?
Assignee | ||
Comment 36•22 years ago
|
||
please file a separate bug for that
Comment 37•22 years ago
|
||
*** Bug 201154 has been marked as a duplicate of this bug. ***
Comment 38•22 years ago
|
||
*** Bug 201553 has been marked as a duplicate of this bug. ***
Comment 39•22 years ago
|
||
*** Bug 201687 has been marked as a duplicate of this bug. ***
Comment 40•22 years ago
|
||
*** Bug 202181 has been marked as a duplicate of this bug. ***
Updated•22 years ago
|
Flags: blocking1.4b?
Comment 41•22 years ago
|
||
*** Bug 203954 has been marked as a duplicate of this bug. ***
![]() |
||
Comment 42•22 years ago
|
||
> actually, it never worked on MacOS X, so it can't break something that is
> already broken
It worked fine on Unix. And people keep breaking it just because they don't use it.
The nsIFile API allows you to check when a file is a link and to resolve it if
it's one. Please do make use of those facilities.
Follow-up discussion in bug 198138
![]() |
||
Comment 43•22 years ago
|
||
Actually, scratch that. Bug 198138 is mac-only. I've filed bug 225055 for the
XP issue.
Updated•21 years ago
|
Product: Browser → Seamonkey
Comment 44•21 years ago
|
||
This should NOT be shown as fixed, a very similar problem persists in moz 1.8/a6
[though not specific to a temp/tmp directory]! I filed a 'new' bug on that,
283243, which also relates to 251027.
You need to log in
before you can comment on or make changes to this bug.
Description
•