Fix for bug 200498. Multiple copies of my bookmarks file are showing up in TEMP / bookmark changes are lost  / cannot modify or delete. r=bsmedberg, sr=bryner